# SimpleWaylandClientFramework

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/include/: App.hpp
Client/src/: App.cpp  main.cpp
include/SWCF/: defines.h
include/SWCF/ClientInterface/: waylandClientInterfaces.hpp
include/SWCF/Core/: waylandConnect.hpp  waylandInterface.hpp  waylandInterfaceManager.hpp
include/SWCF/DebugUtil/Logger/: logger.hpp
include/SWCF/Setup/: Connect.hpp
src/: CMakeLists.txt
src/ClientInterface/: waylandClientInterfaces.cpp
src/Core/: waylandConnect.cpp  waylandInterface.cpp  waylandInterfaceManager.cpp
src/DebugUtil/Logger/: logger.cpp
src/Setup/: Connect.cpp
